--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^6.10.5",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.3.0",
-    "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -20,22 +20,30 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.5",
     "@tanstack/react-table": "^8.20.6",
+    "@tremor/react": "^3.18.7",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "colorthief": "^2.6.0",
     "date-fns": "^4.1.0",
+    "jodit-react": "^5.2.6",
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "react": "^18",
+    "react-color": "^2.19.3",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-multi-select-component": "^4.3.4",
+    "react-tag-input": "6.9.0",
+    "slugify": "^1.6.6",
     "sonner": "^1.7.4",
     "svix": "^1.45.1",
     "tailwind-merge": "^3.0.1",
@@ -46,7 +54,9 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18",
+    "@types/react-tag-input": "^6.6.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.23",
     "postcss": "^8",
